--- a/breast-cancer-detection/main.ipynb
+++ b/breast-cancer-detection/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -390,124 +390,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>399</th>\n",
        "      <td>0</td>\n",
-       "      <td>8.95</td>\n",
-       "      <td>15.76</td>\n",
-       "      <td>58.74</td>\n",
-       "      <td>245.2</td>\n",
-       "      <td>0.09462</td>\n",
-       "      <td>0.1243</td>\n",
-       "      <td>0.09263</td>\n",
-       "      <td>0.02308</td>\n",
-       "      <td>0.1305</td>\n",
+       "      <td>11.80</td>\n",
+       "      <td>17.26</td>\n",
+       "      <td>75.26</td>\n",
+       "      <td>431.9</td>\n",
+       "      <td>0.09087</td>\n",
+       "      <td>0.06232</td>\n",
+       "      <td>0.02853</td>\n",
+       "      <td>0.01638</td>\n",
+       "      <td>0.1847</td>\n",
        "      <td>...</td>\n",
-       "      <td>9.414</td>\n",
-       "      <td>17.07</td>\n",
-       "      <td>63.34</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>0.11790</td>\n",
-       "      <td>0.1879</td>\n",
-       "      <td>0.1544</td>\n",
-       "      <td>0.03846</td>\n",
-       "      <td>0.1652</td>\n",
-       "      <td>0.07722</td>\n",
+       "      <td>13.45</td>\n",
+       "      <td>24.49</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>562.0</td>\n",
+       "      <td>0.1244</td>\n",
+       "      <td>0.1726</td>\n",
+       "      <td>0.1449</td>\n",
+       "      <td>0.05356</td>\n",
+       "      <td>0.2779</td>\n",
+       "      <td>0.08121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>230</th>\n",
+       "      <th>127</th>\n",
        "      <td>1</td>\n",
-       "      <td>17.05</td>\n",
-       "      <td>19.08</td>\n",
-       "      <td>113.40</td>\n",
-       "      <td>895.0</td>\n",
-       "      <td>0.11410</td>\n",
-       "      <td>0.1572</td>\n",
-       "      <td>0.19100</td>\n",
-       "      <td>0.10900</td>\n",
-       "      <td>0.2131</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>18.91</td>\n",
+       "      <td>123.40</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>0.08217</td>\n",
+       "      <td>0.08028</td>\n",
+       "      <td>0.09271</td>\n",
+       "      <td>0.05627</td>\n",
+       "      <td>0.1946</td>\n",
        "      <td>...</td>\n",
-       "      <td>19.590</td>\n",
-       "      <td>24.89</td>\n",
-       "      <td>133.50</td>\n",
-       "      <td>1189.0</td>\n",
-       "      <td>0.17030</td>\n",
-       "      <td>0.3934</td>\n",
-       "      <td>0.5018</td>\n",
-       "      <td>0.25430</td>\n",
-       "      <td>0.3109</td>\n",
-       "      <td>0.09061</td>\n",
+       "      <td>22.32</td>\n",
+       "      <td>25.73</td>\n",
+       "      <td>148.2</td>\n",
+       "      <td>1538.0</td>\n",
+       "      <td>0.1021</td>\n",
+       "      <td>0.2264</td>\n",
+       "      <td>0.3207</td>\n",
+       "      <td>0.12180</td>\n",
+       "      <td>0.2841</td>\n",
+       "      <td>0.06541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>284</th>\n",
-       "      <td>0</td>\n",
-       "      <td>12.89</td>\n",
-       "      <td>15.70</td>\n",
-       "      <td>84.08</td>\n",
-       "      <td>516.6</td>\n",
-       "      <td>0.07818</td>\n",
-       "      <td>0.0958</td>\n",
-       "      <td>0.11150</td>\n",
-       "      <td>0.03390</td>\n",
-       "      <td>0.1432</td>\n",
-       "      <td>...</td>\n",
-       "      <td>13.900</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
        "      <td>19.69</td>\n",
-       "      <td>92.12</td>\n",
-       "      <td>595.6</td>\n",
-       "      <td>0.09926</td>\n",
-       "      <td>0.2317</td>\n",
-       "      <td>0.3344</td>\n",
-       "      <td>0.10170</td>\n",
-       "      <td>0.1999</td>\n",
-       "      <td>0.07127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11.84</td>\n",
-       "      <td>18.94</td>\n",
-       "      <td>75.51</td>\n",
-       "      <td>428.0</td>\n",
-       "      <td>0.08871</td>\n",
-       "      <td>0.0690</td>\n",
-       "      <td>0.02669</td>\n",
-       "      <td>0.01393</td>\n",
-       "      <td>0.1533</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>130.00</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>0.10960</td>\n",
+       "      <td>0.15990</td>\n",
+       "      <td>0.19740</td>\n",
+       "      <td>0.12790</td>\n",
+       "      <td>0.2069</td>\n",
        "      <td>...</td>\n",
-       "      <td>13.300</td>\n",
-       "      <td>24.99</td>\n",
-       "      <td>85.22</td>\n",
-       "      <td>546.3</td>\n",
-       "      <td>0.12800</td>\n",
-       "      <td>0.1880</td>\n",
-       "      <td>0.1471</td>\n",
-       "      <td>0.06913</td>\n",
-       "      <td>0.2535</td>\n",
-       "      <td>0.07993</td>\n",
+       "      <td>23.57</td>\n",
+       "      <td>25.53</td>\n",
+       "      <td>152.5</td>\n",
+       "      <td>1709.0</td>\n",
+       "      <td>0.1444</td>\n",
+       "      <td>0.4245</td>\n",
+       "      <td>0.4504</td>\n",
+       "      <td>0.24300</td>\n",
+       "      <td>0.3613</td>\n",
+       "      <td>0.08758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>180</th>\n",
+       "      <th>282</th>\n",
        "      <td>1</td>\n",
-       "      <td>27.22</td>\n",
-       "      <td>21.87</td>\n",
-       "      <td>182.10</td>\n",
-       "      <td>2250.0</td>\n",
-       "      <td>0.10940</td>\n",
-       "      <td>0.1914</td>\n",
-       "      <td>0.28710</td>\n",
-       "      <td>0.18780</td>\n",
-       "      <td>0.1800</td>\n",
+       "      <td>19.40</td>\n",
+       "      <td>18.18</td>\n",
+       "      <td>127.20</td>\n",
+       "      <td>1145.0</td>\n",
+       "      <td>0.10370</td>\n",
+       "      <td>0.14420</td>\n",
+       "      <td>0.16260</td>\n",
+       "      <td>0.09464</td>\n",
+       "      <td>0.1893</td>\n",
        "      <td>...</td>\n",
-       "      <td>33.120</td>\n",
-       "      <td>32.85</td>\n",
-       "      <td>220.80</td>\n",
-       "      <td>3216.0</td>\n",
-       "      <td>0.14720</td>\n",
-       "      <td>0.4034</td>\n",
-       "      <td>0.5340</td>\n",
-       "      <td>0.26880</td>\n",
-       "      <td>0.2856</td>\n",
-       "      <td>0.08082</td>\n",
+       "      <td>23.79</td>\n",
+       "      <td>28.65</td>\n",
+       "      <td>152.4</td>\n",
+       "      <td>1628.0</td>\n",
+       "      <td>0.1518</td>\n",
+       "      <td>0.3749</td>\n",
+       "      <td>0.4316</td>\n",
+       "      <td>0.22520</td>\n",
+       "      <td>0.3590</td>\n",
+       "      <td>0.07787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>17.35</td>\n",
+       "      <td>134.80</td>\n",
+       "      <td>1335.0</td>\n",
+       "      <td>0.09446</td>\n",
+       "      <td>0.10760</td>\n",
+       "      <td>0.15270</td>\n",
+       "      <td>0.08941</td>\n",
+       "      <td>0.1571</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25.37</td>\n",
+       "      <td>23.17</td>\n",
+       "      <td>166.8</td>\n",
+       "      <td>1946.0</td>\n",
+       "      <td>0.1562</td>\n",
+       "      <td>0.3055</td>\n",
+       "      <td>0.4159</td>\n",
+       "      <td>0.21120</td>\n",
+       "      <td>0.2689</td>\n",
+       "      <td>0.07055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -516,44 +516,44 @@
       ],
       "text/plain": [
        "     target  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
-       "116       0         8.95         15.76           58.74      245.2   \n",
-       "230       1        17.05         19.08          113.40      895.0   \n",
-       "284       0        12.89         15.70           84.08      516.6   \n",
-       "211       0        11.84         18.94           75.51      428.0   \n",
-       "180       1        27.22         21.87          182.10     2250.0   \n",
+       "399       0        11.80         17.26           75.26      431.9   \n",
+       "127       1        19.00         18.91          123.40     1138.0   \n",
+       "2         1        19.69         21.25          130.00     1203.0   \n",
+       "282       1        19.40         18.18          127.20     1145.0   \n",
+       "373       1        20.64         17.35          134.80     1335.0   \n",
        "\n",
        "     smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
-       "116          0.09462            0.1243         0.09263              0.02308   \n",
-       "230          0.11410            0.1572         0.19100              0.10900   \n",
-       "284          0.07818            0.0958         0.11150              0.03390   \n",
-       "211          0.08871            0.0690         0.02669              0.01393   \n",
-       "180          0.10940            0.1914         0.28710              0.18780   \n",
+       "399          0.09087           0.06232         0.02853              0.01638   \n",
+       "127          0.08217           0.08028         0.09271              0.05627   \n",
+       "2            0.10960           0.15990         0.19740              0.12790   \n",
+       "282          0.10370           0.14420         0.16260              0.09464   \n",
+       "373          0.09446           0.10760         0.15270              0.08941   \n",
        "\n",
        "     symmetry_mean  ...  radius_worst  texture_worst  perimeter_worst  \\\n",
-       "116         0.1305  ...         9.414          17.07            63.34   \n",
-       "230         0.2131  ...        19.590          24.89           133.50   \n",
-       "284         0.1432  ...        13.900          19.69            92.12   \n",
-       "211         0.1533  ...        13.300          24.99            85.22   \n",
-       "180         0.1800  ...        33.120          32.85           220.80   \n",
+       "399         0.1847  ...         13.45          24.49             86.0   \n",
+       "127         0.1946  ...         22.32          25.73            148.2   \n",
+       "2           0.2069  ...         23.57          25.53            152.5   \n",
+       "282         0.1893  ...         23.79          28.65            152.4   \n",
+       "373         0.1571  ...         25.37          23.17            166.8   \n",
        "\n",
        "     area_worst  smoothness_worst  compactness_worst  concavity_worst  \\\n",
-       "116       270.0           0.11790             0.1879           0.1544   \n",
-       "230      1189.0           0.17030             0.3934           0.5018   \n",
-       "284       595.6           0.09926             0.2317           0.3344   \n",
-       "211       546.3           0.12800             0.1880           0.1471   \n",
-       "180      3216.0           0.14720             0.4034           0.5340   \n",
+       "399       562.0            0.1244             0.1726           0.1449   \n",
+       "127      1538.0            0.1021             0.2264           0.3207   \n",
+       "2        1709.0            0.1444             0.4245           0.4504   \n",
+       "282      1628.0            0.1518             0.3749           0.4316   \n",
+       "373      1946.0            0.1562             0.3055           0.4159   \n",
        "\n",
        "     concave points_worst  symmetry_worst  fractal_dimension_worst  \n",
-       "116               0.03846          0.1652                  0.07722  \n",
-       "230               0.25430          0.3109                  0.09061  \n",
-       "284               0.10170          0.1999                  0.07127  \n",
-       "211               0.06913          0.2535                  0.07993  \n",
-       "180               0.26880          0.2856                  0.08082  \n",
+       "399               0.05356          0.2779                  0.08121  \n",
+       "127               0.12180          0.2841                  0.06541  \n",
+       "2                 0.24300          0.3613                  0.08758  \n",
+       "282               0.22520          0.3590                  0.07787  \n",
+       "373               0.21120          0.2689                  0.07055  \n",
        "\n",
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
        "<Axes: title={'center': 'Correlation with Diagnosis'}>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1151,14 +1151,14 @@
       "Best parameters for KNN: {'n_neighbors': 7, 'weights': 'distance'}\n",
       "Accuracy of KNN: 0.9474\n",
       "--------------------------------------------------\n",
-      "Best parameters for RandomForest: {'criterion': 'entropy', 'max_depth': 20, 'n_estimators': 50}\n",
+      "Best parameters for RandomForest: {'criterion': 'entropy', 'max_depth': None, 'n_estimators': 50}\n",
       "Accuracy of RandomForest: 0.9649\n",
       "--------------------------------------------------\n",
       "Best parameters for SVM: {'C': 1, 'gamma': 'scale', 'kernel': 'rbf'}\n",
       "Accuracy of SVM: 0.9825\n",
       "--------------------------------------------------\n",
       "Best parameters for DecisionTree: {'criterion': 'entropy', 'max_depth': 10}\n",
-      "Accuracy of DecisionTree: 0.9474\n",
+      "Accuracy of DecisionTree: 0.9561\n",
       "--------------------------------------------------\n"
      ]
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,6 +1214,34 @@
     "\n",
     "with open('best_model.pkl', 'wb') as file:\n",
     "    pickle.dump(best_models[\"LogisticRegression\"], file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test saved model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = pickle.load(open('best_model.pkl', 'rb'))\n",
+    "sample = X_test[0].reshape(1, -1)\n",
+    "print(model.predict(sample))\n",
+    "print(y_test.iloc[0])"
    ]
   }
  ],
